Removed bug where numbers sometimes shift down when the value is invalid. Removed bug that disallowed inputting a new value or using the arrow buttons when the counter reached 0. Removed bug where inputting a value directly also resulted in the counter's value getting assigned to 0.

--- a/src/components/counter/_counter.scss
+++ b/src/components/counter/_counter.scss
@@ -110,6 +110,10 @@ $counter-error-color: $alert-color !default;
       display: block;
     }
 
+    .counter-input.ng-invalid.ng-touched {
+      margin: 0;
+    }
+
     .form {
       .counter {
         background-color: $counter-bg;
